--- a/style.css
+++ b/style.css
@@ -6,10 +6,6 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
-
-
 #panel, #flip
 {
     padding: 5px;
@@ -27,8 +23,14 @@
 #intro
 {
 	background-color: lightgrey;
-    width: 300px;
-    border: 25px solid green;
+    width: 1000px;
+    border: 15px solid green;
     padding: 25px;
     margin: 25px;
+}
+
+#myDIV {
+    width: 500px;
+    height: 500px;
+    background-color: lightblue;
 }
